--- a/MVC/Views/Cart/FormInfo.cshtml
+++ b/MVC/Views/Cart/FormInfo.cshtml
@@ -1,24 +1,24 @@
 ﻿@model MVC.Models.OrderInfomation
 @using (Html.BeginForm("Order", "Cart", FormMethod.Post, new { id = "formInfo" }))
 {
-        @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true, "", new { @class = "alert-danger" })
+    @Html.AntiForgeryToken();
+    @Html.ValidationSummary(true, "", new { @class = "alert-danger" });
 
-        @Html.LabelFor(x => Model.Name)
-        @Html.TextBoxFor(model => model.Name, new { @class = "form-control", @placeholder = "Nhập họ tên" })
-        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })<br />
-        @Html.LabelFor(x => Model.PhoneNumber)
-        @Html.TextBoxFor(model => model.PhoneNumber, new { @class = "form-control", @placeholder = "Nhập số điện thoại" })
-        @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })<br />
-        @Html.LabelFor(x => Model.Email)
-        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @placeholder = "Nhập e-mail" })
-        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })<br />
-        @Html.LabelFor(x => Model.Address)
-        @Html.TextBoxFor(model => model.Address, new { @class = "form-control", @placeholder = "Nhập địa chỉ" })
-        @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })<br />
-        <div class="row pt-4">
-            <div class="col-auto ml-auto">
-                <input type="submit" class="btn btn-info" value="Đặt hàng" />
-            </div>
+    @Html.LabelFor(x => Model.Name);
+    @Html.TextBoxFor(model => model.Name, new { @class = "form-control", @placeholder = "Nhập họ tên" });
+    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" });<br />
+    @Html.LabelFor(x => Model.PhoneNumber);
+    @Html.TextBoxFor(model => model.PhoneNumber, new { @class = "form-control", @placeholder = "Nhập số điện thoại" });
+    @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" });<br />
+    @Html.LabelFor(x => Model.Email);
+    @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @placeholder = "Nhập e-mail" });
+    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" }); <br />
+    @Html.LabelFor(x => Model.Address);
+    @Html.TextBoxFor(model => model.Address, new { @class = "form-control", @placeholder = "Nhập địa chỉ" });
+    @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" }); <br />
+    <div class="row pt-4">
+        <div class="col-auto ml-auto">
+            <input type="submit" class="btn btn-info" value="Đặt hàng" />
         </div>
+    </div>
 }
